test/typechecker.d/invalid/decls.souc.bad
f(x: Integer): Integer = fndo
	i: Integer <- 5
	return i

m = i
